src/App.css
@import url('https://fonts.googleapis.com/css?family=Lato');

body {
  font-family: 'Lato', sans-serif;
  overflow: hidden;
}

h1 {
  margin-bottom: 30px;
  padding-bottom: 16px;
  line-height: 1em;
  border-bottom: 2px solid rgba(255,255,255,.1);
}

button, input {
  line-height: 2em;
}

.main {
  transition: 500ms all ease;
  position: absolute;
  text-align: center;
  width: 100vw;
  height: 100vh;
  background: #1e2429;
  color: white;
}

.stripe {
  position: relative;
  overflow: hidden;
  transition: 500ms all ease;
  height: calc(100% / 9);
  cursor: pointer;
}
.stripe.selected {
  height: 80%;
  cursor: initial;
}
.stripe.small {
  height: calc(20% / 8);
}
.stripe:nth-of-type(odd) {
  background: rgba(0,0,0,.03);
}
.stripe:hover {
  background: rgba(10, 35, 75, .3);
}
.stripe.selected:hover {
  background: none;
}

.letter {
  position: absolute;
  font-family: 'Rubik Mono One', sans-serif;
  line-height: 1em;
  height: 1em;
  width: 100%;
  text-align: center;
  transition: 500ms all ease;
  opacity: 1;
  transform: translateY(0);
}
.stripe.active .letter {
  transition-delay: 0ms;
  opacity: .05;
}
.stripe.selected .letter {
  cursor: pointer;
  transition-delay: 0ms;
  opacity: 1;
}
.stripe.small .letter {
  font-size: .2em;
  transition-delay: 0ms;
  opacity: .2;
}
.stripe.active.small .letter {
  opacity: 1;
}

.background {
  position: absolute;
  width: 100%;
  height: 100%;
  transition: 500ms opacity ease;
  opacity: 0;
}
.stripe.selected .background {
  opacity: .2;
}

.inner {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 100%;
  text-align: center;
}
.preview div.generic {
  font-family: 'Rubik Mono One', sans-serif;
  font-size: 30px;
}
.stripe .preview {
  width: 100%;
  height: 100%;
  transition: 250ms transform ease 500ms, 250ms height ease;
  transform: translateY(calc(-100% - 1.2em));
}
.stripe.active .preview {
  transition-delay: 0ms;
  transform: translateY(0);
}
.stripe.active.small .preview {
  transform: translateY(calc(-100% - 1.2em));
}

.mobile {
  height: 100%;
  width: 100%;
}
.mobile .controls {
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 30px);
  height: 100%;
  overflow-y: auto;
}
.formRow {
  margin: 10px;
  width: 200px;
  text-align: left;
}
.mobile .formRow {
  width: calc(100% - 20px);
}
.formRow .number {
  font-feature-settings: 'tnum';
  -webkit-font-feature-settings: 'tnum';
  opacity: .5;
}


/* Flexbox
***************************************************************************/
.rowParent, .columnParent {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.columnParent {
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.flexChild {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  min-height: 0px;
  min-width: 0px;
}

.flexChild.shrink {
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.columnParent.reverse {
  flex-direction: column-reverse;
}
.rowParent.reverse {
  flex-direction: row-reverse;
}
.flexChild.scroll {
  overflow-y: auto;
  overflow-x: hidden
}
.flexCenter {
  -webkit-box-align: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  -webkit-box-pack: center;
  -moz-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}
.flexLeft {
  -webkit-align-items: left;
  align-items: left;
}
.bottomList {
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
  min-height: -moz-min-content;
  min-height: -webkit-min-content;
  min-height: min-content;
}

.rowParent.wrap,
.columnParent.wrap {
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
}

